# HubPDF

./: .env.example  .gitignore  .replit  AUTHENTICATION_FIXES.md  README.md  SISTEMA_ALERTAS.md  cookies.txt  main.py  pyproject.toml  replit.md
app/: __init__.py  auth.py  config.py  database.py  images_to_pdf.py  middleware.py  models.py  pdf_analyze.py  pdf_compress.py  template_helpers.py  templates.py
attached_assets/: Pasted--Contexto-O-projeto-j-roda-com-FastAPI-Jinja2-Tailwind-middlewares-de-segura-1756299920714_1756299920715.txt  Pasted--Prompt-para-Claude-Replit-HubPDF-ajustado-ao-seu-projeto-atual-Contexto-O-projet-1756299791011_1756299791012.txt  Pasted-1-Renomeie-app-templates-py-para-app-template-helpers-py-para-n-o-conflitar-com-a-pasta-templates--1756226181790_1756226181794.txt  Pasted-A-mensagem-CSRF-token-missing-or-invalid-aparece-quando-o-backend-exige-CSRF-e-o-frontend-n-o-envi-1756304803547_1756304803549.txt  Pasted-Diagnostique-e-corrija-a-publica-o-do-meu-app-FastAPI-HubPDF-no-Replit-O-deploy-diz-Deployment--1762275614372_1762275614374.txt  Pasted-Estou-recebendo-erros-Field-required-em-auth-register-Corrija-o-fluxo-de-cadastro-garantindo-D-1756236488721_1756236488722.txt  Pasted-HubPDF-with-Mercado-Pago-Freemium-Admin-Panel-Multilingual-PT-BR-default-EN-optional-Security-1756219928068_1756219928069.txt  Pasted-Objetivo-meu-app-FastAPI-j-est-publicado-e-o-dom-nio-hubpdf-pro-est-Verified-no-painel-de-Dom-1762279654602_1762279654604.txt  (+3 more)
docs/: REPOSITORY_CLEANUP.md
locales/: en.json  pt.json
scripts/: add_email_index.sql  bench_compress.py  (+2 more)
(+74 files in other folders)
